PlaylistActions: fix sloppy "stop playing after" API and friends

...plus clean-up some EngineController <-> PlaylistActions interaction
and remove some hackiness like frequent calls to ::repaingPlaylist()

First, I wanted to merge the https://git.reviewboard.kde.org/r/107457/
- but the patch just opened my eyes to a greater flaw in the design of
"stop playing after"... So thanks, V. A. Amarnath - you triggered me
studying the code.

BUG: 253822
FIXED-IN: 2.7
REVIEW: 107457